# tistools

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: hist.oxygen.txt  ringdistjob.sh  wholemakejob.sh
lib/: __init__.py  analyze_op.py  block_error_analysis.py  cleaner.py  distrib_op.py  free_energy.py  io_pathdens_fast.py  istar_analysis.py  istar_pathlengths.py  numerical.py  old_repptis.py  pathlengths.py  pathproperties.py  reading.py  repptis_analysis.py  repptis_msm.py  repptis_pathlengths.py  wholemake_scripts.py  writing.py
scripts/: plot_op_vs_time_extended2.py  recalcer  ringdister  stitch_pptis_paths.py  subsampler_chunk  tistools-block-error  tistools-clean-trajectories  tistools-cleaner  tistools-distr-op  tistools-distr-paths  tistools-distrib-path  tistools-more-distr  tistools-msm-analysis  tistools-newcross  tistools-path-distrib  tistools-pcross  tistools-recalcer  tistools-remove-nonshoot  tistools-remove-waters  tistools-ringdister  tistools-running-error  tistools-weight-me  tistools-wholemaker  wholemaker
test/: analysis_notebook.ipynb  benzamidine_pathway_classification.ipynb  benzamidine_pathways.py  block_error_analysis.ipynb  error_analysis_sina.ipynb  istar_test.py  msm_istar.ipynb  msm_pptis.ipynb  msm_pptis_clean.ipynb  msm_pptis_mfpt.ipynb  msm_pptis_mfpt_elias.ipynb  rec_block_error_analysis.ipynb  test_readpic.py  trypsbenz_csv.tcl
test/modify_ha_staple/: modify_pathensemble_weights.py  test_exact_match.py  test_mod2.txt  test_search_logic.py
